# pli

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
src/cli/: helpers.py  main.py  template_main.py
src/test123.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: test_basics.py
test/fixtures/: file_gen.py
