[project]
name = "pli"
version = "0.1.0"
description = " is your Parquet CLI. Built with DuckDB to provide fast and easy inspection and validation of Apache Parquet files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "typer>=0.12.5",
]

[project.scripts]
pli = "cli.main:app"
parquet-cli = "cli.main:app"

[tool.uv]
package = true
dev-dependencies = [
    "moto[s3]>=5.0.14",
    "pandas>=2.2.3",
    "pre-commit>=3.8.0",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
]

[tool.uv.sources]
test123 = { workspace = true }

[tool.pytest.ini_options]
usefixtures = "make_test_files" # global fixture

[tool.ruff.lint.extend-per-file-ignores]
"test/test_*.py" = ["F811"]
"test/*_test.py" = ["F811"]
